<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ghislain.project_api.RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="40dp"
        android:text="@string/accueil"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btApiWow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/api_wow" />

    <Button
        android:id="@+id/btApiLol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/api_lol" />

    <ListView
        android:id="@+id/lvAPI"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>