<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ghislain.project_api.MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="74dp"
        android:text="Authentification : "
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <EditText
        android:id="@+id/etPseudo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etMdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/etPseudo"
        android:layout_below="@+id/etPseudo"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/cbSouvenir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/etMdp"
        android:layout_alignStart="@+id/etMdp"
        android:layout_below="@+id/etMdp"
        android:layout_marginTop="15dp"
        android:text="@string/se_souvenir_de_moi" />

    <Button
        android:id="@+id/btConnexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/etMdp"
        android:layout_below="@+id/etMdp"
        android:layout_marginTop="91dp"
        android:text="@string/connexion" />

    <Button
        android:id="@+id/btInscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btConnexion"
        android:layout_alignBottom="@+id/btConnexion"
        android:layout_alignStart="@+id/etMdp"
        android:text="@string/inscription" />

</RelativeLayout>
